--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 <body>
     <section class="conteudo-principal">
-<h1 class="titulo principal">Meus objetivos para 2025</h1>
-<div class="botoes"></div>
+<h1 class="titulo-principal">Meus objetivos para 2025</h1>
+<div class="botoes">
     <button class="botao"> Formatura </button>
     <button class="botao"> Arrumar um emprego</button>
-    <button class="botao"> juntar 100 mil reais</button>
+    <button class="botao"> Juntar 100 mil reais</button>
     <button class="botao"> Viajar para New York </button>
-
-
+</div>
     </section>
 </body>
 </html>
