--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <section class="conteudo-principal">
 <h1 class="titulo-principal">Meus objetivos para 2025</h1>
 <div class="botoes">
-    <button class="botao"> Formatura </button>
+    <button class="botao ativo"> Formatura </button>
     <button class="botao"> Arrumar um emprego</button>
     <button class="botao"> Juntar 100 mil reais</button>
     <button class="botao"> Viajar para New York </button>
+
 </div>
     </section>
+    <script src="main.js"></script>
 </body>
 </html>
