--- a/index.html
+++ b/index.html
@@ -14,9 +14,26 @@
     <button class="botao"> Arrumar um emprego</button>
     <button class="botao"> Juntar 100 mil reais</button>
     <button class="botao"> Viajar para New York </button>
-
 </div>
+    </section>
+    <section class="aba-texto">
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Dia da formatura</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        </div>
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">colhedor de soja</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        </div>
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Guardar mensalmente</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        </div>
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal"> Compar passagem</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        </div>
     </section>
     <script src="main.js"></script>
 </body>
-</html>0
+</html>
